--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: java
 
 jdk:
-  - openjdk8
+  - openjdk11
+
+before_script:
+  - chmod +x gradlew
 
 script:
-  - javac -d bin -cp src src/name/NameSorter.java
-  - javac -cp "src:test:junit-4.13.2.jar" -d bin/test test/name/*.java
-  - java -cp "bin:test:junit-4.13.2.jar:hamcrest-core-1.3.jar" org.junit.runner.JUnitCore name.FirstNameComparatorTest name.LastNameComparatorTest name.NameTest name.NameSorterTest
+  - ./gradlew clean build
